# Saka-NLP

./: .gitignore  LICENSE  README.md  docs.html  index.html  pyproject.toml  reproduce_issues.py
examples/: async_usage.py  bali_plugin.py  basic_usage.py  jawa_plugin.py  kbbi_demo.py  morphology_advanced.py  stopwords_demo.py  sunda_plugin.py
saka/: __init__.py
saka/core/: analyzer.py  normalizer.py  tokenizer.py
saka/dict/: bali_dict.json  jawa_dict.json  slang_dict.py  stopwords.py  sunda_dict.json
saka/plugins/: kbbi_scraper.py
saka/plugins/bali/: basabali_scraper.py  transliterate.py
saka/plugins/jawa/: sastra_scraper.py  transliterate.py
saka/plugins/sunda/: sundadigi_scraper.py  transliterate.py
saka/scripts/: cli.py
saka/utils/: helpers.py
saka_nlp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_bali.py  test_core.py  test_kbbi_new.py  test_kbbi_session.py  test_sunda_trans.py  test_sundadigi_api.py
