[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saka-nlp"
version = "0.1.6"
authors = [
  { name="Saka-NLP Contributors", email="muhammadikhwanfathulloh17@gmail.com" },
]
description = "Saka: Pilar Pemrosesan Bahasa Nusantara"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.1",
    "beautifulsoup4>=4.9.3",
]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
"saka.dict" = ["*.json", "*.txt"]

[project.urls]
"Homepage" = "https://github.com/Muhammad-Ikhwan-Fathulloh/Saka-NLP"
"Bug Tracker" = "https://github.com/Muhammad-Ikhwan-Fathulloh/Saka-NLP/issues"

[project.scripts]
saka = "saka.scripts.cli:main"
